--- a/client/src/components/Shop/Shop.css
+++ b/client/src/components/Shop/Shop.css
@@ -1,17 +1,34 @@
-.search-container{
+.search-container {
     background-color: rgba(0, 0, 0, 0.85);
     text-align: center;
     line-height: 40px;
 }
-.search-container input{
+
+.search-container input {
     width: 75%;
 }
-.shop-container{
+
+.shop-container {
     display: grid;
     grid-template-columns: 3fr 1fr;
 }
-.product-container{
+
+.product-container {
     border-right: 1px solid lightgray;
     margin-right: 5px;
     margin-left: 50px;
+}
+
+.pagination {
+    margin: 30px;
+}
+
+.pagination button {
+    padding: 0 10px;
+    margin-right: 20px;
+}
+
+.pagination .selected {
+    background-color: rgb(43,43,224);
+    color: white
 }
